mediastack/nzb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nzb-service
  namespace: mediastack
spec:
  selector:
    app: nzb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
